# bot_telegram_ap

./: .env  .gitattributes  Cargo.toml
src/: bot.rs  expre.rs  jugada.rs  main.rs  mouse.rs  pantalla.rs  texto.rs
